--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-image-lightbox": "^5.1.4",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.4",
+    "react-select": "^5.7.0",
     "react-to-print": "^2.14.10",
     "redux": "4.1.1",
     "simplebar-react": "^2.3.6"
