--- a/.gitignore
+++ b/.gitignore
@@ -2,25 +2,25 @@
 
 # dependencies
 /node_modules
-package-lock.json
+# package-lock.json
 
-# testing
-/coverage
+# # testing
+# /coverage
 
-# production
-/build
+# # production
+# /build
 
-yarn.lock
+# yarn.lock
 
-# misc
-.eslintcache
-.DS_Store
-.idea
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# # misc
+# .eslintcache
+# .DS_Store
+# .idea
+# .env.local
+# .env.development.local
+# .env.test.local
+# .env.production.local
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# npm-debug.log*
+# yarn-debug.log*
+# yarn-error.log*
